[Fixed] scroll icon moving dot is not centered.

--- a/resources/public/site/css/components.css
+++ b/resources/public/site/css/components.css
@@ -102,6 +102,9 @@
   transform: translateY(100%) }
 
 #si-scroll-icon--body {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
   border-color: var( --icon-color );
   border-radius: 10px;
   border-style: solid;
@@ -116,10 +119,7 @@
   background-color: var( --icon-color );
   border-radius: 50%;
   content: '';
-  left: 5px;
   height: 5px;
-  position: absolute;
-  top: 5px;
   width: 5px }
 
 #si-scroll-icon--body::after {
@@ -128,7 +128,6 @@
   bottom: -15px;
   content: '';
   height: 10px;
-  left: 2.5px;
   position: absolute;
   transform: rotate(-45deg);
   transform-origin: center;
@@ -136,10 +135,10 @@
 
 @keyframes si-scroll-icon {
   0%   { opacity: 0;
-         transform: translate(0, 0) }
+         transform: translate(0, 3px) }
   40%  { opacity: 1 }
   80%  { opacity: 0;
-         transform: translate(0, 20px) }
+         transform: translate(0, 22px)}
   100% { opacity: 0 }}
 
 /***** Scroll-icon *****/
